[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
minifb = "0.25.0"
rand = "0.8.5"
window_rs = {git = "https://github.com/NoodleSamaChan/window_rs"}
graphic = {git = "https://github.com/NoodleSamaChan/graphic.git", rev = "b8f856f"}

[dev-dependencies]
insta = "1.38.0"
proptest = "1.4.0"

[lib]
name = "pong"
